Fix Creative Commons symbols alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -301,7 +301,7 @@ table th, table td {
 .copyleft {
   height: 16px !important;
   margin-left: 3px;
-  vertical-align: text-top;
+  vertical-align: sub;
 }
 .old-gold-buttons > a {
   text-decoration: none;
